methods.basics.Methods.scala.error
Erreur de compilation :
Methods:2: error: not found: value nb
  nb = 0
  ^Methods:5: error: not found: value nb
    nb = nb+1
    ^Methods:8: error: not found: value nb
  for(i<- 1 to nb){
               ^